# Basic-

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt  Sandbox.cpp
cmake/: Basic++Config.cmake.in
include/Basic++/: Common.hxx  Defer.hxx  Defines.hxx  Expectations.hxx  Expected.hxx  Expected.txx  FileFriend.hxx  Formatting.hxx  IO.hxx  Mathematics.hxx  Message.hxx  NumericAliases.hxx  PCH.hxx  Print.hxx  Printing.hxx  Sys.hpp  TypeName.hxx  dbg.hxx
include/Basic++/win32/: Win32.hpp
src/: Sys.cpp  Win32.cpp
win32/include/win32/: Win32.hpp
win32/src/: Win32.cpp
